--- a/informacion-y-reservas/index.html
+++ b/informacion-y-reservas/index.html
@@ -257,7 +257,7 @@ $( function() {
 
     
 <script src="../static/laparada/uni_form/uni-form.jquery.js" type="text/javascript"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyCBoHKHSwxP7qtOqIAHhzaHmrgVlPrV868&sensor=false"></script>
 <script src="../static/laparada/contacto/js/jquery.gmap.min.js" type="text/javascript"></script>
 
 <script type="text/javascript">
