--- a/informacion-y-reservas/index.html
+++ b/informacion-y-reservas/index.html
@@ -132,6 +132,11 @@
           <span>Situación y contacto</span>
         </a>
     </li>
+    <li class="  last">
+        <a class="pjax" href="../planderecuperacion/"> Plan de recuperación 
+          <span>Junta de Castilla y León</span>
+        </a>
+    </li>
     
 </ul>
 
