--- a/nuestro-entorno/index.html
+++ b/nuestro-entorno/index.html
@@ -123,9 +123,14 @@
         </a>
     </li>
     
-    <li class="  last">
+    <li class="">
         <a class="pjax" href="../informacion-y-reservas/"> Información y reservas
           <span>Situación y contacto</span>
+        </a>
+    </li>
+    <li class="  last">
+        <a class="pjax" href="../planderecuperacion/"> Plan de recuperación 
+          <span>Junta de Castilla y León</span>
         </a>
     </li>
     
